--- a/composer.json
+++ b/composer.json
@@ -27,6 +27,6 @@
     "config": {
         "preferred-install": "dist"
     },
-    "minimum-stability": "dev",
+    "minimum-stability": "stable",
     "prefer-stable": true
 }
